# decentralized-wallet-rust-extension

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
react-extension-app/: .env  package-lock.json  package.json
react-extension-app/public/: index.html  manifest.json
react-extension-app/src/: App.js  chains.js
react-extension-app/src/components/: CreateAccount.js  Home.js  RecoverAccount.js  WalletView.js
src/: config.rs  lib.rs  main.rs
src/account/: create_account.rs  mod.rs  private_key.rs
src/bip/: mnemonic.rs  mod.rs
src/controller/: controller.rs  transfer.rs
src/models/: models.rs
