[package]
name = "decentralized-wallet-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
chrono = "0.4.38"
solana-client = "1.18.11"
solana-sdk = "1.18.11"
tiny-bip39 = "0.8.2"
dotenv = "0.15"
bip32 = "0.3.0"
ed25519-dalek = "1.0.1"
rand = "0.8.5"
sha2 = "0.9.8"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4.17"           
env_logger = "0.9.0"      
actix-cors = "0.6.0"
base58 = "0.2.0"
bs58 = "0.4" 